--- a/tutorial4.html
+++ b/tutorial4.html
@@ -9,7 +9,7 @@
 <p>If you just want to play around with Playfair and see what it can do, you can use my hosted version here: <a href="http://austinclemens.com/Playfair/playfair.html">austinclemens.com/Playfair/playfair.html</a> </p>
 
 <h1>Loading a new data set</h1>
-<p>When you load Playfair, you'll be looking at the <span class='tab'>Data</span> tab of the main navigation bar. Paste your data into this box. Data can be comma or tab delimited. You can paste data directly from Excel into Playfair.</p>
+<p>When you load Playfair, you'll be looking at the data tab of the interface. Paste your data into this box. Data can be comma or tab delimited. You can paste data directly from Excel into Playfair.</p>
 
 <p>After pasting your data in, click anywhere outside the data box and Playfair will parse the data. A message will be displayed below the data box summarizing your data. <b>You should look carefully at this message</b> as it may explain problems you are having in graphing.
 
