--- a/tutorial3.html
+++ b/tutorial3.html
@@ -23,8 +23,12 @@
 
 <img src="assets/legend3.png" width=700></img>
 
-<p><b><a href="tutorial4.html">Next: More complicated graphs</a></b></p>
-<p><b><a href="tutorial3.html">Previous: Make a simple graph</a></b></p>
+<p><b>This brings us to a very very important thing to understand about Playfair</b>: when you redraw a chart, you lose any annotations or adjustments you have made on the chart itself. If you want to keep your annotations, you need to instead click the <span class='button'>Redraw w/annotations</span> button. You will still lose some modifications, like any color changes you made, but you will keep added text, paths, and arrow annotations.</p>
+
+<p>Now you know most of the basics of using Playfair. There is one more important concept: creating grouped charts (more than one line or more than one point color). The next tutorial explains how you set up your data and tell Playfair you want a grouped chart.</p>
+
+<p><b><a href="tutorial4.html">Next: A more complicated graph</a></b></p>
+<p><b><a href="tutorial2.html">Previous: Make a simple graph</a></b></p>
 
 
 </div>
