--- a/tutorial1.html
+++ b/tutorial1.html
@@ -17,76 +17,75 @@
 
 <p>For example, in the screenshot above, the 'DATE' variable is being incorrectly interpreted as a numeric variable, where it really should be a date. We can force Playfair to parse this variable as a date by clicking the dropdown and selecting the correct data type. I'm using some US unemployment rate data from FRED in this example. If you want to follow along, copy it from below and paste into Playfair:</p>
 
-<div class='scroller'>
-<div class='code'>DATE	UNRATE</div>
-<div class='code'>1948	3.8</div>
-<div class='code'>1949	6.1</div>
-<div class='code'>1950	5.2</div>
-<div class='code'>1951	3.3</div>
-<div class='code'>1952	3</div>
-<div class='code'>1953	2.9</div>
-<div class='code'>1954	5.6</div>
-<div class='code'>1955	4.4</div>
-<div class='code'>1956	4.1</div>
-<div class='code'>1957	4.3</div>
-<div class='code'>1958	6.8</div>
-<div class='code'>1959	5.5</div>
-<div class='code'>1960	5.5</div>
-<div class='code'>1961	6.7</div>
-<div class='code'>1962	5.6</div>
-<div class='code'>1963	5.6</div>
-<div class='code'>1964	5.2</div>
-<div class='code'>1965	4.5</div>
-<div class='code'>1966	3.8</div>
-<div class='code'>1967	3.8</div>
-<div class='code'>1968	3.6</div>
-<div class='code'>1969	3.5</div>
-<div class='code'>1970	5</div>
-<div class='code'>1971	6</div>
-<div class='code'>1972	5.6</div>
-<div class='code'>1973	4.9</div>
-<div class='code'>1974	5.6</div>
-<div class='code'>1975	8.5</div>
-<div class='code'>1976	7.7</div>
-<div class='code'>1977	7.1</div>
-<div class='code'>1978	6.1</div>
-<div class='code'>1979	5.9</div>
-<div class='code'>1980	7.2</div>
-<div class='code'>1981	7.6</div>
-<div class='code'>1982	9.7</div>
-<div class='code'>1983	9.6</div>
-<div class='code'>1984	7.5</div>
-<div class='code'>1985	7.2</div>
-<div class='code'>1986	7</div>
-<div class='code'>1987	6.2</div>
-<div class='code'>1988	5.5</div>
-<div class='code'>1989	5.3</div>
-<div class='code'>1990	5.6</div>
-<div class='code'>1991	6.9</div>
-<div class='code'>1992	7.5</div>
-<div class='code'>1993	6.9</div>
-<div class='code'>1994	6.1</div>
-<div class='code'>1995	5.6</div>
-<div class='code'>1996	5.4</div>
-<div class='code'>1997	4.9</div>
-<div class='code'>1998	4.5</div>
-<div class='code'>1999	4.2</div>
-<div class='code'>2000	4</div>
-<div class='code'>2001	4.7</div>
-<div class='code'>2002	5.8</div>
-<div class='code'>2003	6</div>
-<div class='code'>2004	5.5</div>
-<div class='code'>2005	5.1</div>
-<div class='code'>2006	4.6</div>
-<div class='code'>2007	4.6</div>
-<div class='code'>2008	5.8</div>
-<div class='code'>2009	9.3</div>
-<div class='code'>2010	9.6</div>
-<div class='code'>2011	8.9</div>
-<div class='code'>2012	8.1</div>
-<div class='code'>2013	7.4</div>
-<div class='code'>2014	6.2</div>
-<div class='code'>2015	5.3</div>
+<div class='scroller code'>DATE	UNRATE
+1948	3.8
+1949	6.1
+1950	5.2
+1951	3.3
+1952	3
+1953	2.9
+1954	5.6
+1955	4.4
+1956	4.1
+1957	4.3
+1958	6.8
+1959	5.5
+1960	5.5
+1961	6.7
+1962	5.6
+1963	5.6
+1964	5.2
+1965	4.5
+1966	3.8
+1967	3.8
+1968	3.6
+1969	3.5
+1970	5
+1971	6
+1972	5.6
+1973	4.9
+1974	5.6
+1975	8.5
+1976	7.7
+1977	7.1
+1978	6.1
+1979	5.9
+1980	7.2
+1981	7.6
+1982	9.7
+1983	9.6
+1984	7.5
+1985	7.2
+1986	7
+1987	6.2
+1988	5.5
+1989	5.3
+1990	5.6
+1991	6.9
+1992	7.5
+1993	6.9
+1994	6.1
+1995	5.6
+1996	5.4
+1997	4.9
+1998	4.5
+1999	4.2
+2000	4
+2001	4.7
+2002	5.8
+2003	6
+2004	5.5
+2005	5.1
+2006	4.6
+2007	4.6
+2008	5.8
+2009	9.3
+2010	9.6
+2011	8.9
+2012	8.1
+2013	7.4
+2014	6.2
+2015	5.3
 </div>
 
 <p>You may also get a yellow box. This usually means that some of your data rows are missing data. This is not a problem per se, and shouldn't affect your graphs, but if you notice odd behavior in Playfair you may want to remove these rows.</p>
