--- a/tutorial5.html
+++ b/tutorial5.html
@@ -4,9 +4,9 @@
 
 <body>
 <div id="container" style="padding-top: 40px;">
-<h2>Loading Data</h2>
+<h2>The Settings Tab</h2>
 <p><b>Very important disclaimer</b>: Playfair is currently only compatible with Chrome.</p>
-<p>If you just want to play around with Playfair and see what it can do, you can use my hosted version here: <a href="http://austinclemens.com/Playfair/playfair.html">austinclemens.com/Playfair/playfair.html</a> </p>
+<p>Again, the hosted version of Playfair is available here: <a href="http://austinclemens.com/Playfair/playfair.html">austinclemens.com/Playfair/playfair.html</a> </p>
 
 <h1>Loading a new data set</h1>
 <p>When you load Playfair, you'll be looking at the data tab of the interface. Paste your data into this box. Data can be comma or tab delimited. You can paste data directly from Excel into Playfair.</p>
@@ -17,81 +17,9 @@
 
 <p>For example, in the screenshot above, the 'DATE' variable is being incorrectly interpreted as a numeric variable, where it really should be a date. We can force Playfair to parse this variable as a date by clicking the dropdown and selecting the correct data type. I'm using some US unemployment rate data from FRED in this example. If you want to follow along, copy it from below and paste into Playfair:</p>
 
-<div class='scroller'>
-<div class='code'>DATE	UNRATE</div>
-<div class='code'>1948	3.8</div>
-<div class='code'>1949	6.1</div>
-<div class='code'>1950	5.2</div>
-<div class='code'>1951	3.3</div>
-<div class='code'>1952	3</div>
-<div class='code'>1953	2.9</div>
-<div class='code'>1954	5.6</div>
-<div class='code'>1955	4.4</div>
-<div class='code'>1956	4.1</div>
-<div class='code'>1957	4.3</div>
-<div class='code'>1958	6.8</div>
-<div class='code'>1959	5.5</div>
-<div class='code'>1960	5.5</div>
-<div class='code'>1961	6.7</div>
-<div class='code'>1962	5.6</div>
-<div class='code'>1963	5.6</div>
-<div class='code'>1964	5.2</div>
-<div class='code'>1965	4.5</div>
-<div class='code'>1966	3.8</div>
-<div class='code'>1967	3.8</div>
-<div class='code'>1968	3.6</div>
-<div class='code'>1969	3.5</div>
-<div class='code'>1970	5</div>
-<div class='code'>1971	6</div>
-<div class='code'>1972	5.6</div>
-<div class='code'>1973	4.9</div>
-<div class='code'>1974	5.6</div>
-<div class='code'>1975	8.5</div>
-<div class='code'>1976	7.7</div>
-<div class='code'>1977	7.1</div>
-<div class='code'>1978	6.1</div>
-<div class='code'>1979	5.9</div>
-<div class='code'>1980	7.2</div>
-<div class='code'>1981	7.6</div>
-<div class='code'>1982	9.7</div>
-<div class='code'>1983	9.6</div>
-<div class='code'>1984	7.5</div>
-<div class='code'>1985	7.2</div>
-<div class='code'>1986	7</div>
-<div class='code'>1987	6.2</div>
-<div class='code'>1988	5.5</div>
-<div class='code'>1989	5.3</div>
-<div class='code'>1990	5.6</div>
-<div class='code'>1991	6.9</div>
-<div class='code'>1992	7.5</div>
-<div class='code'>1993	6.9</div>
-<div class='code'>1994	6.1</div>
-<div class='code'>1995	5.6</div>
-<div class='code'>1996	5.4</div>
-<div class='code'>1997	4.9</div>
-<div class='code'>1998	4.5</div>
-<div class='code'>1999	4.2</div>
-<div class='code'>2000	4</div>
-<div class='code'>2001	4.7</div>
-<div class='code'>2002	5.8</div>
-<div class='code'>2003	6</div>
-<div class='code'>2004	5.5</div>
-<div class='code'>2005	5.1</div>
-<div class='code'>2006	4.6</div>
-<div class='code'>2007	4.6</div>
-<div class='code'>2008	5.8</div>
-<div class='code'>2009	9.3</div>
-<div class='code'>2010	9.6</div>
-<div class='code'>2011	8.9</div>
-<div class='code'>2012	8.1</div>
-<div class='code'>2013	7.4</div>
-<div class='code'>2014	6.2</div>
-<div class='code'>2015	5.3</div>
-</div>
-
 <p>You may also get a yellow box. This usually means that some of your data rows are missing data. This is not a problem per se, and shouldn't affect your graphs, but if you notice odd behavior in Playfair you may want to remove these rows.</p>
 
-<p><b><a href="tutorial2.html">Next: Make a simple graph</a></b></p>
+<p><b><a href="tutorial4.html">Previous: A more complicated graph</a></b></p>
 
 
 </div>
